# robot_phase1_bringup

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: base.yaml  lidar.yaml  nav2_params.yaml  slam_toolbox.yaml
docs/: rock5c_migration.md
launch/: mapping.launch.py  navigation.launch.py  robot_base.launch.py
maps/: README.md  map.pgm  map.yaml
repos/: rock5c_phase1.repos
rviz/: mapping.rviz  navigation.rviz
scripts/: setup_rock5c_jazzy.sh
udev/: 99-robot-phase1.rules
